<resources>
    <string name="app_name">SustainWise</string>
    <string name="logo">Logo</string>

    <!-- Welcome Text -->
    <string name="title_login">Login</string>
    <string name="desc_login">Please log in with your information!</string>
    <string name="title_signup">Sign Up</string>
    <string name="desc_signup">Please fill in your new information!</string>
    <string name="title_forgot_password">Forgot Password</string>
    <string name="desc_forgot_password">Please enter your new password!</string>

    <!-- Auth -->
    <string name="title_email">Email</string>
    <string name="input_email">Enter your email</string>
    <string name="invalid_email">Enter a valid email</string>
    <string name="title_password">Password</string>
    <string name="input_password">Enter your password</string>
    <string name="password_short">Password must be at least 8 characters</string>
    <string name="title_username">Username</string>
    <string name="input_name">Enter your name</string>
    <string name="empty_name">Name cannot be empty</string>
    <string name="name_short">Name must be at least 5 characters</string>
    <string name="title_new_password">New Password</string>
    <string name="forgot_password">Forgot Password?</string>

    <!-- Button -->
    <string name="btn_login">Login</string>
    <string name="btn_signup">Sign Up</string>
    <string name="btn_add">Add Transaction</string>
    <string name="btn_change_password">Change Password</string>
    <string name="btn_save">Save</string>
    <string name="btn_edit">Edit Profile</string>
    <string name="btn_delete">Delete</string>
    <string name="btn_update">Update</string>

    <!-- With -->
    <string name="login_with">or Login with</string>
    <string name="signup_with">or Sign Up with</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_home">Home</string>
    <string name="title_history">History</string>
    <string name="title_recomend">Recommend</string>
    <string name="title_account">Account</string>

    <!-- Item row -->
    <string name="arrow_icon_income">Income</string>
    <string name="nominal">Total Amount</string>
    <string name="date">date</string>
    <string name="category">Category</string>

    <!-- Home -->
    <string name="ic_logo">Logo</string>
    <string name="no_transactions">No transactions found for the selected month.</string>
    <string name="welcome_home">Hi, Welcome!</string>
    <string name="title_saldo">Total Balance</string>
    <string name="title_total_balance">Amount</string>
    <string name="title_riwayat_home">Transaction History</string>

    <!-- Input Transaction -->
    <string name="transaction_type">Select Transaction</string>
    <string name="amount">Total Amount</string>
    <string name="enter_amount">Enter the transaction amount</string>
    <string name="label_date">Date</string>
    <string name="select_date">Please select the transaction date</string>
    <string name="enter_category">category type</string>

    <!-- History -->
    <string name="history_label">Transaction History This Month</string>
    <string name="transaction_month">November 2024</string>

    <!-- Account -->
    <string name="profile_picture">Profile Picture</string>
    <string name="profile_name">Username</string>
    <string name="faq_icon">FAQ Icon</string>
    <string name="label_faq">FAQ</string>
    <string name="arrow_icon_right">Right Arrow Icon</string>
    <string name="about_icon">About Icon</string>
    <string name="label_about">About</string>
    <string name="logout_icon">Logout Icon</string>
    <string name="label_logout">Logout</string>
    <string name="edtprofile_email">email@gmail.com</string>
    <string name="edtprofile_password">********</string>
    <string name="label_save">Save</string>
    <string name="google_login">Login using Google account</string>
    <string name="default_web_client_id">your-web-client-id</string>

    <!-- Recommend -->
    <string name="tat_label">Tips and Tricks</string>
    <string name="insight_label">Insight</string>
    <string name="tat_placeholder">Contents of this month generate Tips and Tricks</string>

    <!-- About -->
    <string name="about_title">About the Application</string>
    <string name="about_desc">SustainWise: Money Manager aims to tackle these financial challenges by providing a comprehensive, user-friendly platorm that enables users to track income and expenses. Equipped with real-time nancial insights, personalized budgeting tips and recommendation, and detailed expense histories, SustainWise empowers users to make informed decisions about their spending and develop sustainable budgeting habits</string>

    <!-- FaQ -->
    <string name="faq_title">Frequently Asked Questions</string>
    <string name="question_one">1. How to Add a Transaction?</string>
    <string name="question_two">2. How to Maximize ML Features?</string>
    <string name="question_three">3. How to Update Username?</string>
    <string name="question_four">4. How to Update or Delete Profile Picture?</string>
    <string name="question_five">5. What to Do When You Forget Your Password?</string>
    <string name="question_six">6. How to Logout?</string>
    <string name="answer_one">Go to the Add Transaction page by tapping the add icon in the navigation menu. Choose income or expense, input the amount, select the date, and pick the relevant category.</string>
    <string name="answer_two">On the Recommendations page, explore the \'Insights\' and \'Tips and Tricks\' sections. Provide your monthly income data to get accurate insights and suggestions for better financial management.</string>
    <string name="answer_three">Navigate to the Account page and select Update Profile. Modify your username and tap Save to apply the changes.</string>
    <string name="answer_four">Go to the Account page and select Update Profile. Choose \'Update\' to pick a new picture or \'Delete\' to remove it. Tap Save to finalize the changes.</string>
    <string name="answer_five">Tap \'Forgot Password\' on the login page. Enter your email and tap \'Change Password\'. Check your email for a reset link, follow it, and create a new password.</string>
    <string name="answer_six">Navigate to the Account page and tap \'Logout\'. You will be logged out of the application.</string>

    <!-- Action bar -->
    <string name="view_transaction">Transaction</string>
    <string name="view_faq">FaQ</string>
    <string name="view_about">About</string>
    <string name="view_edtprofil">Edit Profile</string>
    <string name="view_home">Sustain Wise</string>

</resources>
