<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home"
        android:title="@string/title_home" />
    <item
        android:id="@+id/navigation_history"
        android:icon="@drawable/ic_history"
        android:title="@string/title_history" />
    <item
        android:id="@+id/navigation_transaction"
        android:enabled="false"
        android:title="" />
    <item
        android:id="@+id/navigation_recomend"
        android:icon="@drawable/ic_recomend"
        android:title="@string/title_recomend" />
    <item
        android:id="@+id/navigation_account"
        android:icon="@drawable/ic_account"
        android:title="@string/title_account" />
</menu>