<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_main">

    <fragment
        android:id="@+id/navigation_main"
        android:name="com.laila.sustainwise.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_history"
        android:name="com.laila.sustainwise.ui.history.HistoryFragment"
        android:label="@string/title_history"
        tools:layout="@layout/fragment_history" />

    <activity
        android:id="@+id/navigation_transaction"
        android:name="com.laila.sustainwise.ui.transaction.TransactionActivity"
        tools:layout="@layout/activity_transaction" />

    <fragment
        android:id="@+id/navigation_recomend"
        android:name="com.laila.sustainwise.ui.recomend.RecomendFragment"
        android:label="@string/title_recomend"
        tools:layout="@layout/fragment_recomend" />

    <fragment
        android:id="@+id/navigation_account"
        android:name="com.laila.sustainwise.ui.account.AccountFragment"
        android:label="@string/title_account"
        tools:layout="@layout/fragment_account" />

</navigation>