<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    app:cardBackgroundColor="@color/statusBarColor"
    app:cardCornerRadius="8dp"
    app:cardElevation="4dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="12dp"
        android:layout_marginRight="12dp"
        android:layout_marginBottom="12dp"
        android:orientation="horizontal"
        android:padding="8dp">

        <ImageView
            android:id="@+id/ivArrowIncome"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_gravity="start"
            android:contentDescription="@string/arrow_icon_income"
            android:src="@drawable/ic_arrow_green" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:paddingStart="12dp">

            <TextView
                android:id="@+id/tvNominalIncome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_bold"
                android:text="@string/nominal"
                android:textColor="@color/green"
                android:textSize="26sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvCategoryIncome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_regular"
                android:text="@string/category"
                android:textColor="@color/textColor"
                android:textSize="14sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/tvDateIncome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="6dp"
            android:layout_gravity="end"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/date"
            android:textColor="@color/textColor"
            android:textSize="14sp" />
    </LinearLayout>
</androidx.cardview.widget.CardView>
