<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/windowBackground"
    android:fillViewport="true"
    android:padding="16dp">

<androidx.constraintlayout.widget.ConstraintLayout
android:layout_width="match_parent"
android:layout_height="wrap_content">

<!-- Profile Picture -->

    <!-- Button Delete -->

    <ImageView
        android:id="@+id/ivProfilePicture"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginTop="108dp"
        android:background="@drawable/circle_background"
        android:contentDescription="@string/profile_picture"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_profile_placehorder"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
    android:id="@+id/btnDelete"
    android:layout_width="120dp"
    android:layout_height="wrap_content"
    android:layout_marginTop="8dp"
    android:layout_marginEnd="8dp"
    android:backgroundTint="@color/red"
    android:fontFamily="@font/poppins_bold"
    android:text="@string/btn_delete"
    android:textColor="@color/windowBackground"
    app:layout_constraintEnd_toStartOf="@id/btnUpdate"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/ivProfilePicture" />

<!-- Button Update -->
<Button
    android:id="@+id/btnUpdate"
    android:layout_width="120dp"
    android:layout_height="wrap_content"
    android:layout_marginStart="8dp"
    android:layout_marginTop="8dp"
    android:backgroundTint="@color/green"
    android:fontFamily="@font/poppins_bold"
    android:text="@string/btn_update"
    android:textColor="@color/statusBarColor"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toEndOf="@id/btnDelete"
    app:layout_constraintTop_toBottomOf="@id/ivProfilePicture" />

<!-- CardView for Inputs -->
<androidx.cardview.widget.CardView
    android:id="@+id/cardViewForm"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="4dp"
    android:layout_marginTop="16dp"
    app:cardBackgroundColor="@color/statusBarColor"
    app:cardCornerRadius="12dp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/btnDelete">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <!-- Username Input -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/title_username"
            android:textColor="@color/textColor"
            android:textSize="16sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/nameEditTextLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp">

            <com.laila.sustainwise.ui.customview.NameEditText
                android:id="@+id/ed_signup_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/input_name"
                android:inputType="text"
                android:paddingHorizontal="16dp"
                android:textColor="@color/textColor"
                android:textSize="16sp" />
        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>
</androidx.cardview.widget.CardView>

<!-- Save Button -->
<Button
    android:id="@+id/btnSave"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_marginTop="16dp"
    android:backgroundTint="@color/colorPrimary"
    android:fontFamily="@font/poppins_bold"
    android:text="@string/label_save"
    android:textColor="@color/textColor"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/cardViewForm" />

</androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
